# CiviCue

./: .env.ci  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitleaks.toml  .spectral.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECRETS.md  confession-056c2ba-A.md  confession-056c2ba-B.md  confession-17572846-task7.1.md  confession-191161d-sf-registry-population.md  confession-19b0006-TM-MAINT.md  confession-1d525e3-66.7.md  confession-36a5bf2-task7.3-final.md  confession-36a5bf2-task7.3-retention.md  confession-58a28b7-66.3.md  confession-58a28b7-66.4.md  confession-62.4.md  confession-62.9.md  confession-62e5782-66.8.md  confession-772b6ff-task6-slice1.md  confession-7c7cf30-c.md  confession-7c7cf30-ci.md  confession-7c7cf30-env-nodeenv.md  confession-7c7cf30-vitest.md  confession-82a573b-b.md  confession-8eec6fb-1.md  confession-8eec6fb-task4-fixes.md  confession-8fd9f26-a.md  confession-9861329-DB.65.md  confession-a44e77e-TM-MAINT.md  confession-b0cf757-66.5.md  confession-b0cf757-66.6.md  confession-bb28b53-task7.5-lintfix.md  confession-cede3e1-task5-precommit.md  (+17 more)
.claude/: settings.local.json
.husky/: pre-commit
.taskmaster/: CLAUDE.md  config.json  dependencies.md  state.json
311 Cases/: README.md
Archived Raw Data/: README.md
BOS MINUTES/: README.md
Behested_Payments_SF_Master/: README.md
Building Permits/: README.md
ingestion/python/: README.md  pyproject.toml
ingestion/python/src/civic_ingest/: __init__.py  cli.py  models.py  sfbos_extractor.py  sites.py
ingestion/python/tests/: test_sfbos_extractor.py
(+359 files in other folders)
