[project]
name = "civic-ingest"
version = "0.1.0"
description = "Quarantined ingestion package for civic documents (JSONL emitter)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "CiviCue", email = "dev@civinue.local"}]

dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "pdfplumber>=0.11",
  "pydantic>=2.8",
]

[project.scripts]
civic-ingest = "civic_ingest.cli:main"

[tool.uv]
package = true

